venera/ohos_plugins/zip_flutter/lib/src/generated_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

class NativeLibrary {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NativeLibrary(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NativeLibrary.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  void __va_start(
    ffi.Pointer<va_list> arg0,
  ) {
    return ___va_start(
      arg0,
    );
  }

  late final ___va_startPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<va_list>)>>(
          '__va_start');
  late final ___va_start =
      ___va_startPtr.asFunction<void Function(ffi.Pointer<va_list>)>();

  void __security_init_cookie() {
    return ___security_init_cookie();
  }

  late final ___security_init_cookiePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          '__security_init_cookie');
  late final ___security_init_cookie =
      ___security_init_cookiePtr.asFunction<void Function()>();

  void __security_check_cookie(
    int _StackCookie,
  ) {
    return ___security_check_cookie(
      _StackCookie,
    );
  }

  late final ___security_check_cookiePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.UintPtr)>>(
          '__security_check_cookie');
  late final ___security_check_cookie =
      ___security_check_cookiePtr.asFunction<void Function(int)>();

  void __report_gsfailure(
    int _StackCookie,
  ) {
    return ___report_gsfailure(
      _StackCookie,
    );
  }

  late final ___report_gsfailurePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.UintPtr)>>(
          '__report_gsfailure');
  late final ___report_gsfailure =
      ___report_gsfailurePtr.asFunction<void Function(int)>();

  late final ffi.Pointer<ffi.UintPtr> ___security_cookie =
      _lookup<ffi.UintPtr>('__security_cookie');

  int get __security_cookie => ___security_cookie.value;

  set __security_cookie(int value) => ___security_cookie.value = value;

  late final ffi.Pointer<ffi.Int> _zipWriteStatusLength =
      _lookup<ffi.Int>('zipWriteStatusLength');

  int get zipWriteStatusLength => _zipWriteStatusLength.value;

  set zipWriteStatusLength(int value) => _zipWriteStatusLength.value = value;

  /// Looks up the error message string corresponding to an error number.
  /// @param errnum error number
  /// @return error message string corresponding to errnum or NULL if error is not
  /// found.
  ffi.Pointer<ffi.Char> zip_strerror(
    int errnum,
  ) {
    return _zip_strerror(
      errnum,
    );
  }

  late final _zip_strerrorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int)>>(
          'zip_strerror');
  late final _zip_strerror =
      _zip_strerrorPtr.asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  /// Opens zip archive with compression level using the given mode.
  ///
  /// @param zipname zip archive file name.
  /// @param level compression level (0-9 are the standard zlib-style levels).
  /// @param mode file access mode.
  /// - 'r': opens a file for reading/extracting (the file must exists).
  /// - 'w': creates an empty file for writing.
  /// - 'a': appends to an existing archive.
  ///
  /// @return the zip archive handler or NULL on error
  ffi.Pointer<zip_t> zip_open(
    ffi.Pointer<ffi.Char> zipname,
    int level,
    int mode,
  ) {
    return _zip_open(
      zipname,
      level,
      mode,
    );
  }

  late final _zip_openPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<zip_t> Function(
              ffi.Pointer<ffi.Char>, ffi.Int, ffi.Char)>>('zip_open');
  late final _zip_open = _zip_openPtr.asFunction<
      ffi.Pointer<zip_t> Function(ffi.Pointer<ffi.Char>, int, int)>();

  /// Opens zip archive with compression level using the given mode.
  /// The function additionally returns @param errnum -
  ///
  /// @param zipname zip archive file name.
  /// @param level compression level (0-9 are the standard zlib-style levels).
  /// @param mode file access mode.
  /// - 'r': opens a file for reading/extracting (the file must exists).
  /// - 'w': creates an empty file for writing.
  /// - 'a': appends to an existing archive.
  /// @param errnum 0 on success, negative number (< 0) on error.
  ///
  /// @return the zip archive handler or NULL on error
  ffi.Pointer<zip_t> zip_openwitherror(
    ffi.Pointer<ffi.Char> zipname,
    int level,
    int mode,
    ffi.Pointer<ffi.Int> errnum,
  ) {
    return _zip_openwitherror(
      zipname,
      level,
      mode,
      errnum,
    );
  }

  late final _zip_openwitherrorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<zip_t> Function(ffi.Pointer<ffi.Char>, ffi.Int, ffi.Char,
              ffi.Pointer<ffi.Int>)>>('zip_openwitherror');
  late final _zip_openwitherror = _zip_openwitherrorPtr.asFunction<
      ffi.Pointer<zip_t> Function(
          ffi.Pointer<ffi.Char>, int, int, ffi.Pointer<ffi.Int>)>();

  /// Closes the zip archive, releases resources - always finalize.
  ///
  /// @param zip zip archive handler.
  void zip_close(
    ffi.Pointer<zip_t> zip,
  ) {
    return _zip_close(
      zip,
    );
  }

  late final _zip_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<zip_t>)>>(
          'zip_close');
  late final _zip_close =
      _zip_closePtr.asFunction<void Function(ffi.Pointer<zip_t>)>();

  /// Determines if the archive has a zip64 end of central directory headers.
  ///
  /// @param zip zip archive handler.
  ///
  /// @return the return code - 1 (true), 0 (false), negative number (< 0) on
  /// error.
  int zip_is64(
    ffi.Pointer<zip_t> zip,
  ) {
    return _zip_is64(
      zip,
    );
  }

  late final _zip_is64Ptr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<zip_t>)>>(
          'zip_is64');
  late final _zip_is64 =
      _zip_is64Ptr.asFunction<int Function(ffi.Pointer<zip_t>)>();

  /// Opens an entry by name in the zip archive.
  ///
  /// For zip archive opened in 'w' or 'a' mode the function will append
  /// a new entry. In readonly mode the function tries to locate the entry
  /// in global dictionary.
  ///
  /// @param zip zip archive handler.
  /// @param entryname an entry name in local dictionary.
  ///
  /// @return the return code - 0 on success, negative number (< 0) on error.
  int zip_entry_open(
    ffi.Pointer<zip_t> zip,
    ffi.Pointer<ffi.Char> entryname,
  ) {
    return _zip_entry_open(
      zip,
      entryname,
    );
  }

  late final _zip_entry_openPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<zip_t>, ffi.Pointer<ffi.Char>)>>('zip_entry_open');
  late final _zip_entry_open = _zip_entry_openPtr
      .asFunction<int Function(ffi.Pointer<zip_t>, ffi.Pointer<ffi.Char>)>();

  /// Opens an entry by name in the zip archive.
  ///
  /// For zip archive opened in 'w' or 'a' mode the function will append
  /// a new entry. In readonly mode the function tries to locate the entry
  /// in global dictionary (case sensitive).
  ///
  /// @param zip zip archive handler.
  /// @param entryname an entry name in local dictionary (case sensitive).
  ///
  /// @return the return code - 0 on success, negative number (< 0) on error.
  int zip_entry_opencasesensitive(
    ffi.Pointer<zip_t> zip,
    ffi.Pointer<ffi.Char> entryname,
  ) {
    return _zip_entry_opencasesensitive(
      zip,
      entryname,
    );
  }

  late final _zip_entry_opencasesensitivePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<zip_t>,
              ffi.Pointer<ffi.Char>)>>('zip_entry_opencasesensitive');
  late final _zip_entry_opencasesensitive = _zip_entry_opencasesensitivePtr
      .asFunction<int Function(ffi.Pointer<zip_t>, ffi.Pointer<ffi.Char>)>();

  /// Opens a new entry by index in the zip archive.
  ///
  /// This function is only valid if zip archive was opened in 'r' (readonly) mode.
  ///
  /// @param zip zip archive handler.
  /// @param index index in local dictionary.
  ///
  /// @return the return code - 0 on success, negative number (< 0) on error.
  int zip_entry_openbyindex(
    ffi.Pointer<zip_t> zip,
    int index,
  ) {
    return _zip_entry_openbyindex(
      zip,
      index,
    );
  }

  late final _zip_entry_openbyindexPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<zip_t>, ffi.Size)>>(
      'zip_entry_openbyindex');
  late final _zip_entry_openbyindex = _zip_entry_openbyindexPtr
      .asFunction<int Function(ffi.Pointer<zip_t>, int)>();

  /// Closes a zip entry, flushes buffer and releases resources.
  ///
  /// @param zip zip archive handler.
  ///
  /// @return the return code - 0 on success, negative number (< 0) on error.
  int zip_entry_close(
    ffi.Pointer<zip_t> zip,
  ) {
    return _zip_entry_close(
      zip,
    );
  }

  late final _zip_entry_closePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<zip_t>)>>(
          'zip_entry_close');
  late final _zip_entry_close =
      _zip_entry_closePtr.asFunction<int Function(ffi.Pointer<zip_t>)>();

  /// Returns a local name of the current zip entry.
  ///
  /// The main difference between user's entry name and local entry name
  /// is optional relative path.
  /// Following .ZIP File Format Specification - the path stored MUST not contain
  /// a drive or device letter, or a leading slash.
  /// All slashes MUST be forward slashes '/' as opposed to backwards slashes '\'
  /// for compatibility with Amiga and UNIX file systems etc.
  ///
  /// @param zip: zip archive handler.
  ///
  /// @return the pointer to the current zip entry name, or NULL on error.
  ffi.Pointer<ffi.Char> zip_entry_name(
    ffi.Pointer<zip_t> zip,
  ) {
    return _zip_entry_name(
      zip,
    );
  }

  late final _zip_entry_namePtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<zip_t>)>>(
      'zip_entry_name');
  late final _zip_entry_name = _zip_entry_namePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<zip_t>)>();

  /// Returns an index of the current zip entry.
  ///
  /// @param zip zip archive handler.
  ///
  /// @return the index on success, negative number (< 0) on error.
  int zip_entry_index(
    ffi.Pointer<zip_t> zip,
  ) {
    return _zip_entry_index(
      zip,
    );
  }

  late final _zip_entry_indexPtr =
      _lookup<ffi.NativeFunction<ssize_t Function(ffi.Pointer<zip_t>)>>(
          'zip_entry_index');
  late final _zip_entry_index =
      _zip_entry_indexPtr.asFunction<int Function(ffi.Pointer<zip_t>)>();

  /// Determines if the current zip entry is a directory entry.
  ///
  /// @param zip zip archive handler.
  ///
  /// @return the return code - 1 (true), 0 (false), negative number (< 0) on
  /// error.
  int zip_entry_isdir(
    ffi.Pointer<zip_t> zip,
  ) {
    return _zip_entry_isdir(
      zip,
    );
  }

  late final _zip_entry_isdirPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<zip_t>)>>(
          'zip_entry_isdir');
  late final _zip_entry_isdir =
      _zip_entry_isdirPtr.asFunction<int Function(ffi.Pointer<zip_t>)>();

  /// Returns the uncompressed size of the current zip entry.
  /// Alias for zip_entry_uncomp_size (for backward compatibility).
  ///
  /// @param zip zip archive handler.
  ///
  /// @return the uncompressed size in bytes.
  int zip_entry_size(
    ffi.Pointer<zip_t> zip,
  ) {
    return _zip_entry_size(
      zip,
    );
  }

  late final _zip_entry_sizePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedLongLong Function(ffi.Pointer<zip_t>)>>('zip_entry_size');
  late final _zip_entry_size =
      _zip_entry_sizePtr.asFunction<int Function(ffi.Pointer<zip_t>)>();
